# fastapi-tortoise-poetry-template

./: .gitignore  README.md  app.py  pyproject.toml  schemas.py  settings.py
.github/workflows/: ci.yml
models/: users.py
routers/: users.py
tests/: conftest.py  test_group.py  test_users.py
